<resources>
    <string name="app_name">learn-sqlite</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="input_email">Input Email</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="mail">Mail</string>
</resources>